center collectors UI fix

--- a/public/css/Component/Admin/Admin_Center_Main_Collectors.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Collectors.css
@@ -1,5 +1,4 @@
-.Admin_Collector {
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
+.Admin_Center_Main_Collectors {
 
     * {
         margin: 0px;
@@ -13,11 +12,12 @@
         color: inherit;
     }
 
-    .main {
+    .main-right {
         width: 100%;
         height: 727px;
         display: grid;
         grid-template-rows: 8% 92%;
+        overflow: hidden;
     }
 
     .main-top {
@@ -60,77 +60,43 @@
 
     .main-bottom {
         display: grid;
-        grid-template-rows: 15% 85%;
+        grid-template-rows: 17% 83%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
     }
+
+    .main-bottom-top {
+        /* border-bottom: 1px solid #e1e1e1; */
+        border-radius: 10px;
+        /* box-shadow: 0 0 1px rgba(0, 0, 0, 0.1); */
+    }
+
 
     .main-right-top-two {
         height: 50px;
         display: flex;
         align-items: center;
         padding-left: 33px;
-        padding-top: 20px;
+        padding-top: 5px;
+
     }
 
     .main-right-top-two h1 {
         font-size: 28px;
     }
 
-    .main-right-top-three-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-right: 30px;
-        cursor: pointer;
-    }
-
-    .main-right-top-three-content p {
-        font-size: 17px;
-        padding-bottom: 5px;
-    }
-
     .main-right-bottom-down {
         width: 99%;
-        height: 500px;
+        height: 100%;
         overflow: scroll;
         padding-left: 1%;
+
     }
 
     .main-right-bottom-top {
-        padding-left: 1%;
         width: 99%;
-    }
+        padding-left: 1%;
 
-    .line {
-        width: 93px;
-        height: 3px;
-        background-color: #1B6652;
-    }
-
-    .line1 {
-        width: 93px;
-        height: 3px;
-        background-color: none;
-    }
-
-    .table-row {
-        font-size: 1px;
-        font-family: Montserrat;
-        text-align: center;
-        height: 75px;
-        display: grid;
-        grid-template-columns: 15% 15% 10% 24% 12% 12% 12%;
-        border-bottom: 2px solid #CACACA;
-    }
-
-    .table-header {
-        background-color: #B9FFB7;
-        font-size: 17px;
-        font-family: Montserrat;
-        text-align: center;
-        height: 55px;
-        display: grid;
-        grid-template-columns: 15% 15% 10% 24% 12% 12% 12%;
     }
 
     .table {
@@ -145,16 +111,42 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        text-align: center;
+    }
+
+    .table-header {
+        background-color: #ecf0f1;
+        font-size: 17px;
+        font-family: Montserrat;
+        text-align: center;
+        height: 55px;
+        display: grid;
+        grid-template-columns: 10% 12% 12% 12% 22% 12% 10% 10%;
+    }
+
+    .table-row {
+        font-size: 1px;
+        font-family: Montserrat;
+        text-align: center;
+        height: 52px;
+        display: grid;
+        grid-template-columns: 10% 12% 12% 12% 22% 12% 10% 10%;
+        border-bottom: 2px solid #CACACA;
     }
 
     .table td {
-        height: 75px;
-        font-size: 18px;
+        height: 50px;
+        font-size: 16px;
         vertical-align: middle;
         text-align: center;
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow-y: scroll;
+    }
+
+    td img {
+        margin: 6px;
     }
 
     .table-row img {
@@ -163,142 +155,32 @@
         cursor: pointer;
     }
 
-    .profilepic {
-        width: 60px !important;
-        height: 60px !important;
+    .collector_image img {
+        width: 67px !important;
+        height: 67px !important;
         border-radius: 50%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
-
-    .delete_confirm {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-
-    }
-
-    .delete_confirm .popup {
-        width: 400px;
-        background: white;
-        border-radius: 6px;
-        top: 0;
-        text-align: center;
-        padding: 0 30px 30px;
-        color: #333;
-        transition: transform 0.4s, top 0.4s;
-    }
-
-    .delete_confirm .popup a {
-        width: auto;
-    }
-
-    .delete_confirm .open-popup {
-        visibility: visible;
-        top: 50%;
-    }
-
-    .delete_confirm .popup img {
-        width: 100px;
-        margin-top: 35px;
-        border-radius: 50%;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    .delete_confirm .popup h2 {
-        font-size: 23px;
-        font-weight: 600;
-        margin: 10px 0 10px;
-    }
-
-    .delete_confirm .btns {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .delete_confirm .deletebtn {
-        width: 150px;
-        margin-top: 30px;
-        margin-right: 20px;
-        padding: 10px 0;
-        background: rgb(220, 39, 39);
-        color: white;
-        border: 0;
-        outline: none;
-        font-size: 18px;
-        border-radius: 4px;
-        cursor: pointer;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    .delete_confirm .cancelbtn {
-        width: 150px;
-        margin-top: 30px;
-        padding: 10px 0;
-        background: #bab3b3;
-        color: white;
-        border: 0;
-        outline: none;
-        font-size: 18px;
-        border-radius: 4px;
-        cursor: pointer;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    @media screen and (max-width: 1178px) {
-        .image2 {
-            display: none;
-        }
-
-        .main-bottom-content h4 {
-            font-size: 15px !important;
-        }
-
-        .main-bottom-content h6 {
-            font-size: 13px !important;
-        }
-    }
-
-    @media screen and (max-width: 914px) {
-        .main-bottom-bottom {
-            display: flex;
-            flex-direction: column;
-        }
-    }
-
+    
+    /* ------ */
     @media screen and (max-width: 1118px) {
         .main-right-top-one-content {
             width: 250px;
             margin-left: 1%;
-
         }
 
         .table td {
-
             font-size: 12px;
-
         }
 
         .table-header {
-            font-size: 14px !important;
+            font-size: 14px;
         }
 
         .table-row img {
             width: 20px;
             height: 20px;
-
         }
-
-
     }
 
     @media screen and (max-width:862px) {
@@ -315,34 +197,13 @@
 
         .main-right-top-three-content p {
             font-size: 14px;
+
         }
 
-        .main-right-bottom-top {
-            width: 130%;
-        }
 
-        .main-right-bottom-down {
-            width: 130%;
-        }
-
-    }
-
-    @media screen and (max-width: 762px) {
-        .main-right-top-two button {
-            width: 125px;
-            font-size: 15px;
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-            padding-bottom: 5px;
-        }
-    }
-
-    @media screen and (max-width: 738px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
+        .line {
+            width: 86px;
+            height: 2px;
 
         }
 
@@ -353,164 +214,35 @@
         }
 
         .table-header {
-            font-size: 12px !important;
+            font-size: 12px;
         }
 
         .table-row img {
-            width: 20px;
-            height: 20px;
+            width: 17px;
+            height: 17px;
 
         }
 
 
     }
 
-    @media screen and (max-width: 612px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-
-        }
-
+    @media screen and (max-width: 692px) {
         .table td {
-
-            font-size: 8.5px;
-
+            font-size: 9px;
         }
 
         .table-header {
-            font-size: 11px !important;
+            font-size: 10px;
         }
 
         .table-row img {
-            width: 20px;
-            height: 20px;
-
+            width: 15px;
+            height: 15px;
         }
 
-
-    }
-
-    /*Vehicle details popup*/
-    .vehicle-details-popup-box {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-
-    }
-
-    .vehicle-details-popup-form {
-        width: 30%;
-        background: white;
-        border-radius: 6px;
-        position: relative;
-        top: 0;
-        text-align: center;
-        padding: 0 30px 30px;
-        color: #333;
-        transition: transform 0.4s, top 0.4s;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .vehicle-details-popup-form-close {
-        width: 25px;
-        height: 25px;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        width: 20px;
-        height: 20px;
-    }
-
-    .vehicle-details-popup {
-        display: grid;
-        grid-template-columns: 40% 60%;
-        width: 100%;
-        border-radius: 4px;
-        height: 100%;
-        padding-top: 10px;
-        margin-top: 17px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .vehicle-details-labels {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 40px;
-        padding-bottom: 50px;
-        padding-left: 60px;
-    }
-
-    .vehicle-details-labels span {
-        margin-bottom: 15px;
-        font-size: 15px;
-        color: #7c7c7d;
-
-    }
-
-
-    .vehicle-details-values {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 40px;
-        padding-bottom: 50px;
-        padding-left: 60px;
-
-    }
-
-    .vehicle-details-values span {
-        margin-bottom: 15px;
-        font-size: 15px;
-        color: #767e95;
-        font-weight: 550;
-
-    }
-
-
-    .vehicle-details-topic {
-        font-size: 18px;
-        font-weight: 500;
-        position: relative;
-        margin-inline-end: auto;
-        margin-top: 15px;
-
-    }
-
-    .vehicle-details-topic::before {
-        content: '';
-        position: absolute;
-        margin-top: 23px;
-        margin-left: 45px;
-        margin-bottom: 15px;
-        height: 3px;
-        width: 45px;
-        background: #1B6652;
-
-    }
-
-
-    @media screen and(max-width: 1307px) {
-
-        .vehicle-details-labels {
-            padding-left: 40px;
-        }
-
-        .vehicle-details-values {
-            padding-left: 40px;
+        .main-right-bottom {
+            width: 140%;
         }
     }
+
 }
