--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,6 +108,8 @@
 @import url('Component/Admin/Admin_Center_Main.css');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
 
+@import url('Component/Admin/Admin_Center_Main_Collectors.css');
+
 
 @import url('Component/Animation/main.css');
 
