--- a/public/css/Component/Admin/Admin_Center_Main_Collectors.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Collectors.css
@@ -530,5 +530,176 @@
         }
     }
 
+    /*popup table*/
+    .collector-assis-details-popup-box {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        display: none;
+
+    }
+
+    .collector-assis-details-popup-table {
+        width: 65%;
+        height: 75%;
+        background: white;
+        border-radius: 6px;
+        position: relative;
+        top: 0;
+        text-align: center;
+        padding: 30px;
+        color: #333;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .collector-assis-details-popup-table-close {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 20px;
+        right: 30px;
+     
+    }
+
+    .popup-table-caption{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding-bottom: 15px;
+    }
+
+    .popup-table-container{
+        display: grid;
+        grid-template-rows: 10% 80% 10%;
+        width: 100%;
+        height: 100%;
+      
+    }
+
+    .popup-table-caption h2{
+        font-size: 23px;
+        font-weight: 550;
+        position: relative;
+        margin-inline-end: auto;
+       
+
+    }
+
+    .popup-table-caption h2::before {
+        content: '';
+        position: absolute;
+        margin-top: 27px;
+        height: 4px;
+        width: 50px;
+        background: #1B6652;
+
+    }
+
+
+    .collector-assis-table-top{
+        width: 100%;
+    
+    }
+
+    .collector-assis-table-down{
+        width: 100%;
+        max-height: 50vh; 
+        overflow: auto;
+ 
+    }
+
+    .popup-table-header {
+        background-color: #ecf0f1;
+        font-size: 17px;
+        font-family: Montserrat;
+        text-align: center;
+        height: 55px;
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+     
+  
+    }
+
+    .popup-table-row {
+        font-size: 1px;
+        font-family: Montserrat;
+        text-align: center;
+        height: 55px;
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+        border-bottom: 2px solid #CACACA;
+  
+    
+    }
+    
+    .popup-table {
+        width: 100%;
+        border-collapse: collapse;
+        text-align: center;
+        
+ 
+    }
+
+    .popup-table-header th {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+       
+    }
+
+    .popup-table td {
+        height: 55px;
+        font-size: 16px;
+        vertical-align: middle;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+       
+    }
+
+    .popup-table-container-bottom{
+        
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin-top: 20px;
+        background-color: white;
+        
+    }
+
+    .popup-table-container-bottom button{
+        height: 35px;
+        width: 10%;
+        outline: none;
+        color: white;
+        font-size: 16px;
+        font-weight: 500;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        letter-spacing: 1px;
+        background: #1B6652;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+    .popup-table-container-bottom button:hover {
+        background: rgb(28, 79, 64);
+    }
+
 
 }
