--- a/public/css/Component/Admin/Admin_Center_Main.css
+++ b/public/css/Component/Admin/Admin_Center_Main.css
@@ -370,7 +370,7 @@
       .details-cards {
         display: grid;
         grid-template-columns: 30% auto;
-        grid-gap: 3rem;
+        grid-gap: 1.75rem;
       }
       
       .details-cards-left {
@@ -393,7 +393,8 @@
       }
       
       .center-manager-content img {
-        width: 180px;
+        width: 150px;
+        height: 150px;
         margin: 0.5rem 0rem;
         border-radius: 50%;
       }
@@ -495,7 +496,7 @@
       }
       
       #part1 .circle {
-        background-color: #fff048;
+        background-color: #899a9d;
         /*transform: rotate(76deg);*/
         animation: first 0.3s 1 forwards;
       }
@@ -504,7 +505,7 @@
         transform: rotate(90deg);
       }
       #part2 .circle {
-        background-color: #4fc4f6;
+        background-color: #1b464a;
         animation: second 0.3s 1 forwards 0.5s;
       }
       
@@ -512,7 +513,7 @@
         transform: rotate(180deg);
       }
       #part3 .circle {
-        background-color: #4ff668;
+        background-color: #68bf77;
         animation: third 0.3s 1 forwards 0.8s;
       }
       
@@ -520,7 +521,7 @@
         transform: rotate(270deg);
       }
       #part4 .circle {
-        background-color: #f64f4f;
+        background-color: #e5fa70;
         animation: fouth 0.3s 1 forwards 1.1s;
       }
       
@@ -532,6 +533,7 @@
         align-items: center;
         justify-content:center ;
         border-radius: 15px;
+        height: 315px;
         /* border: 1px solid red; */
         /* box-shadow: rgba(17, 17, 26, 0.1) 2px 2px 16px; */
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -574,19 +576,19 @@
       }
       
       .incoming hr {
-        background: #fff048;
+        background: #899a9d;
       }
       
       .assigned hr {
-        background: #4fc4f6;
+        background: #1b464a;
       }
       
       .completed hr {
-        background: #4ff668;
+        background: #68bf77;
       }
       
       .cancelled hr {
-        background: #f64f4f;
+        background: #e5fa70;
       }
       
       .center-map-container{
@@ -597,8 +599,8 @@
       
       
       .center-map-container img{
-        width: 285px;
-        height: 264px;
+        width: 300px;
+        height: 315px;
         border-radius: 15px;
         /* box-shadow: rgba(17, 17, 26, 0.1) 2px 2px 16px; */
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
