center main incoming requests

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,8 @@
 
 @import url('Component/Admin/Admin_Center_Main_Collectors.css');
 @import url('Component/Admin/Admin_Center_Main_Workers.css');
+@import url('Component/Admin/Admin_Center_Main_Request_Incoming.css');
+
 
 
 @import url('Component/Animation/main.css');
