pushing the ui chagnes

--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -1,12 +1,11 @@
 .Customer_History_Top {
-    #history {
-        background: #1B6652;
-        background-color: rgba(27, 102, 82, 0.4);
+
+    #history i {
+        color: var(--green-color-one);
     }
 
-    #history .main-left-middle-content-line {
-        background: #1B6652;
-        background: radial-gradient(82.23% 108.11% at 101.39% 101.07%, #13C93E 0%, #ADE446 100%);
+    #history h3 {
+        color: var(--green-color-one);
     }
 
     .main-right {
