--- a/public/css/Component/Customer/Customer_Request_Main.css
+++ b/public/css/Component/Customer/Customer_Request_Main.css
@@ -1,13 +1,11 @@
 .Customer_Request_Main {
 
-    #request {
-        background: #1B6652;
-        background-color: rgba(27, 102, 82, 0.4);
+    #request i {
+        color: var(--green-color-one);
     }
 
-    #request .main-left-middle-content-line {
-        background: #1B6652;
-        background: radial-gradient(82.23% 108.11% at 101.39% 101.07%, #13C93E 0%, #ADE446 100%);
+    #request h3 {
+        color: var(--green-color-one);
     }
 
     .main-right {
