--- a/public/css/Component/Customer/Customer_Editprofile.css
+++ b/public/css/Component/Customer/Customer_Editprofile.css
@@ -10,14 +10,12 @@
 
     }
 
-    #edit_profile {
-        background: #1B6652;
-        background-color: rgba(27, 102, 82, 0.4);
+    #edit_profile i {
+        color: var(--green-color-one);
     }
 
-    #edit_profile .main-left-middle-content-line {
-        background: #1B6652;
-        background: radial-gradient(82.23% 108.11% at 101.39% 101.07%, #13C93E 0%, #ADE446 100%);
+    #edit_profile h3 {
+        color: var(--green-color-one);
     }
 
     .main {
