--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -7,14 +7,12 @@
         font-family: Inter;
     }
 
-    #dashboard {
-        background: #1B6652;
-        background-color: rgba(27, 102, 82, 0.4);
+    #dashboard i {
+        color: var(--green-color-one);
     }
 
-    #dashboard .main-left-middle-content-line {
-        background: #1B6652;
-        background: radial-gradient(82.23% 108.11% at 101.39% 101.07%, #13C93E 0%, #ADE446 100%);
+    #dashboard h3 {
+        color: var(--green-color-one);
     }
 
     .main-right {
