--- a/public/css/Component/Customer/Customer_Complain_History.css
+++ b/public/css/Component/Customer/Customer_Complain_History.css
@@ -1,7 +1,6 @@
 .Customer_Complain_History {
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
 
-
     * {
         margin: 0;
         padding: 0;
@@ -13,70 +12,30 @@
         color: inherit;
     }
 
-
-    .main-right-top {
-        height: 100%;
-    }
-
-    .main-right-bottom {
-        display: grid;
-        height: 100%;
-    }
-
-    .main-right-bottom-container {
-        display: grid;
-        grid-template-rows: 10% 90%;
-        width: 100%;
-        height: 550px;
-    }
-
-    .main-right-bottom-container-top {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-bottom: 20px;
-        margin-left: 20px;
-    }
-
-    .circle {
-        border-radius: 50%;
-        background-color: #1B6652;
-        width: 10px;
-        height: 10px;
-        margin-right: 10px;
-    }
-
-    .main-right-bottom-container-container {
-        width: 100%;
-        height: 100%;
-    }
-
     .main-right-bottom-top {
-        padding-left: 1%;
-        width: 99%;
+        padding-left: 3.5%;
+        width: 96.5%;
     }
 
     .main-right-bottom-down {
-        width: 99%;
+        padding-left: 3.5%;
+        width: 96.5%;
         height: 450px;
         overflow: scroll;
-        padding-left: 1%;
     }
 
     .table {
-        padding-left: 1%;
-        width: 99%;
         border-collapse: collapse;
         text-align: center;
-        padding-left: 1%;
+        padding-left: 3.5%;
+        width: 96.5%;
     }
 
     .table-header {
-        background-color: #ecf0f1;
-        font-size: 17px;
-        font-family: Montserrat;
+        background-color: var(--background-color-two);
+        font-size: 15px;
         text-align: center;
-        height: 55px;
+        height: 45px;
         display: grid;
         margin-bottom: 0px;
         grid-template-columns: 20% 20% 20% 40%;
@@ -93,27 +52,29 @@
     .table-row {
         margin-bottom: 2px;
         font-size: 1px;
-        font-family: Montserrat;
         text-align: center;
-        height: 52px;
+        height: 45px;
         display: grid;
         grid-template-columns: 20% 20% 20% 40%;
-        border-bottom: 2px solid #CACACA;
+        border-bottom: 1px solid var(--background-color-two);
     }
 
     .table td {
-        height: 50px;
-        font-size: 17px;
-        vertical-align: middle;
-        text-align: center;
+        height: 40px;
+        font-size: 14px;
+        text-align: center !important;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
-    .table-row img {
-        width: 25px;
-        height: 25px;
+    .table-row:hover {
+        background-color: var(--background-color-two);
         cursor: pointer;
+        color: black;
+    }
+
+    .table-row:hover .table td {
+        color: white !important;
     }
 }
