--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -1,4 +1,7 @@
 .Customer_History_Top {
+    * {
+        color: var(--main-text-color);
+    }
 
     #history i {
         color: var(--green-color-one);
@@ -12,61 +15,175 @@
         display: grid;
         width: 100%;
         height: 100%;
-        grid-template-rows: 24% 76%;
+        grid-template-rows: 22% 78%;
         overflow: hidden;
+        background-color: var(--background-color-two);
+        padding-left: 1.5%;
+        padding-right: 1.5%;
+        padding-top: 0.5%;
+        padding-bottom: 0.7%;
+        box-sizing: border-box;
+        box-shadow: var(--box-shadow);
     }
 
     .main-right-top {
         display: flex;
         flex-direction: column;
+        background-color: var(--background-color-main);
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        box-shadow: var(--box-shadow);
+
     }
 
     .main-right-top-one {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
-        height: 70px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        justify-content: space-around;
+        margin-top: 0.5%;
+        border: 10px;
+        width: 97%;
+        box-sizing: border-box;
+        margin-left: 1.5%;
+        margin-right: 1.5%;
     }
 
-    .main-right-top-one-search {
+    .main-right-top-search {
         display: flex;
         align-items: center;
+        justify-content: center;
+        width: 35%;
+        position: relative;
     }
 
-    .main-right-top-one img {
-        margin-left: 30px;
-        margin-right: 14px;
-        width: 22px;
-        height: 22px;
+    .main-right-top-search i {
+        position: absolute;
+        font-size: 25px;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
     }
 
-    .main-right-top-one input {
-        width: 375px;
-        height: 24px;
-        border-radius: 3px;
-        border: 1px solid #7f8c8d;
-        padding-left: 10px;
+    .main-right-top-search input {
+        width: 100%;
+        height: 33px;
+        border-radius: 7px;
+        background-color: var(--background-color-two);
+        border: 1px solid #dcdde1;
+        font-size: 14px;
+        padding-left: 40px;
+        letter-spacing: 0.03rem;
+        color: var(--main-text-color);
     }
 
-    .main-right-top-one-content {
+    .main-right-top-search input:focus {
+        border: 1px solid #1ca557;
+        outline: none;
+    }
+
+    .main-right-top-notification {
         display: flex;
-        flex-direction: row;
         align-items: center;
+        justify-content: center;
+        margin-left: 35%;
+        margin-right: 2.5%;
     }
 
-    .main-right-top-one-content p {
-        font-size: 18px;
-        font-family: inter;
-        letter-spacing: 0.1px;
-    }
-
-    .main-right-top-one-content img {
-        width: 55px;
-        height: 55px;
-        margin-left: 15px;
+    .dot {
+        width: 11px;
+        height: 11px;
         border-radius: 50%;
+        background-color: #F13E3E;
+        margin-top: -14px;
+        margin-left: -12px;
+    }
+
+    .main-right-top-notification i {
+        font-size: 29px;
+        cursor: pointer;
+    }
+
+    .notification_popup {
+        height: 0;
+        position: absolute;
+        top: 9%;
+        right: 11%;
+        background-color: var(--background-color-main);
+        border-radius: 10px;
+        padding: 0;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        transition: height 0.6s ease-in;
+        width: 18%;
+        visibility: hidden;
+        opacity: 0;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: scroll;
+        border: 1px solid #dcdde1;
+    }
+
+    .notification_popup h1 {
+        font-size: 19px;
+        letter-spacing: 0.001rem;
+        margin-bottom: 13px;
+        margin-top: 5px;
+        margin-left: 8px;
+    }
+
+    .notification_popup.active {
+        height: 200px;
+        padding: 10px;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .notification {
+        height: 43px !important;
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+
+    .notification:hover {
+        background-color: var(--notification-hover);
+    }
+
+    .notification-green-dot {
+        width: 11px;
+        height: 11px;
+        border-radius: 50%;
+        background-color: var(--green-color-one);
+        margin-right: 10px;
+    }
+
+    .main-right-top-profile {
+        display: flex;
+        margin-right: 40px;
+    }
+
+    .main-right-top-profile img {
+        width: 50px;
+        height: 50px;
+        margin-right: 15px;
+        border-radius: 10px;
+    }
+
+    .main-right-top-profile-cont {
+        margin-top: 7px;
+    }
+
+    .main-right-top-profile-cont h3 {
+        font-size: 18px;
+        letter-spacing: 0.03rem;
+    }
+
+    .main-right-top-profile-cont p {
+        font-size: 14px;
     }
 
     .main-right-top-two {
@@ -77,7 +194,8 @@
     }
 
     .main-right-top-two h1 {
-        font-size: 22px;
+        font-size: 19px;
+        margin-left: 1%;
     }
 
     .main-right-top-three {
@@ -93,20 +211,22 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-right: 30px;
+        margin-right: 15px;
         cursor: pointer;
     }
 
     .main-right-top-three-content p {
-        font-size: 17px;
+        font-size: 15px;
         padding-bottom: 5px;
+        color: var(--main-text-color);
+        letter-spacing: 0.03rem;
     }
 
 
     .line {
         width: 93px;
         height: 3px !important;
-        background-color: #1B6652;
+        background-color: var(--green-color-one);
     }
 
     .line1 {
@@ -114,6 +234,48 @@
         height: 3px !important;
         background-color: none;
     }
+
+    .main-right-bottom {
+        display: grid;
+        height: 100%;
+        background-color: var(--background-color-main);
+        box-sizing: border-box;
+        box-shadow: var(--box-shadow);
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+
+    .main-right-bottom-container {
+        display: grid;
+        grid-template-rows: 10% 90%;
+        width: 100%;
+        height: 550px;
+    }
+
+    .main-right-bottom-container-top {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-left: 20px;
+        font-size: 15px;
+    }
+
+    .circle {
+        border-radius: 50%;
+        background-color: #1B6652;
+        width: 8px;
+        height: 8px;
+        margin-right: 8px;
+        margin-left: 2%;
+
+    }
+
+    .main-right-bottom-container-container {
+        width: 100%;
+        height: 100%;
+    }
+
 
     @media screen and (max-width: 1118px) {
         .main-right-top-one-content {
