--- a/public/css/Component/Customer/Customer_Transfer_History.css
+++ b/public/css/Component/Customer/Customer_Transfer_History.css
@@ -1,19 +1,7 @@
 .Customer_Transfer_History {
 
 
-    .main-right-bottom-down {
-        width: 99%;
-        height: 450px;
-        overflow: scroll;
-        padding-left: 1%;
-    }
 
-    .table {
-        border-collapse: collapse;
-        text-align: center;
-        padding-left: 3.5%;
-        width: 96.5%;
-    }
 
     .table-header {
         background-color: var(--background-color-two);
@@ -37,14 +25,14 @@
         margin-bottom: 2px;
         font-size: 1px;
         text-align: center;
-        height: 45px;
+        height: 50px;
         display: grid;
         grid-template-columns: 15% 20% 15% 20% 15% 15%;
         border-bottom: 1px solid var(--background-color-two);
     }
 
     .table td {
-        height: 40px;
+        height: 50px;
         font-size: 14px;
         text-align: center !important;
         display: flex;
@@ -53,7 +41,9 @@
     }
 
     .table td p {
-        width: 100px;
+        width: 50px;
+        text-align: left;
+
     }
 
 
@@ -61,6 +51,7 @@
         margin-right: 5px;
         width: 25px;
         height: 23px;
+        margin-right: 8%;
     }
 
     .td-pro_pic {
