--- a/public/css/Component/Customer/Customer_Main.css
+++ b/public/css/Component/Customer/Customer_Main.css
@@ -23,6 +23,7 @@
         flex-direction: column;
         background-color: var(--background-color-main);
         color: var(--main-text-color);
+        border-right: 1px solid rgba(0, 0, 0, 0.1);
     }
 
     .main-left-top {
