--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,7 @@
     --background-color-main: #ffff;
     --background-color-right: #fbfbfb;
     --notification-hover: #64d798;
-    --box-shadow: 0 1px 1px 0px rgba(0, 0, 0, 0.4);
+    --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 a {
