--- a/public/css/Component/Customer/Customer_Complain_History.css
+++ b/public/css/Component/Customer/Customer_Complain_History.css
@@ -14,7 +14,7 @@
 
 
     .table-header {
-        background-color: var(--background-color-two);
+        background-color: #ecf0f1;
         font-size: 15px;
         text-align: center;
         height: 45px;
