--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -18,19 +18,14 @@
         grid-template-rows: 22% 78%;
         overflow: hidden;
         background-color: var(--background-color-right);
-
         box-sizing: border-box;
-        box-shadow: var(--box-shadow);
     }
 
     .main-right-top {
         display: flex;
         flex-direction: column;
-        background-color: var(--background-color-main);
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
-        box-shadow: var(--box-shadow);
-
     }
 
     .main-right-top-one {
@@ -38,12 +33,12 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
-        margin-top: 0.5%;
         border: 10px;
-        width: 97%;
+        width: 100%;
         box-sizing: border-box;
-        margin-left: 1.5%;
-        margin-right: 1.5%;
+        height: 55%;
+        box-shadow: var(--box-shadow2);
+
     }
 
     .main-right-top-search {
@@ -193,6 +188,7 @@
     .main-right-top-two h1 {
         font-size: 19px;
         margin-left: 1%;
+        margin-top: 1%;
     }
 
     .main-right-top-three {
@@ -235,11 +231,10 @@
     .main-right-bottom {
         display: grid;
         height: 100%;
-        background-color: var(--background-color-main);
         box-sizing: border-box;
-        box-shadow: var(--box-shadow);
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
+        background-color: var(--background-color-right);
     }
 
     .main-right-bottom-container {
@@ -290,6 +285,7 @@
         text-align: center;
         padding-left: 3.5%;
         width: 96.5%;
+        background-color: white;
     }
 
 
