--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,7 +122,7 @@
     --background-color-right: #fbfbfb;
     --notification-hover: #64d798;
     --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    --box-shadow2: 0px 2px 2px rgba(0, 0, 0, 0.1);
+    --box-shadow2: 0 1px 10px rgba(0, 0, 0, 0.1);
 
 }
 
