--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -26,6 +26,8 @@
         flex-direction: column;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
+        background-color: var(--background-color-right) !important;
+
     }
 
     .main-right-top-one {
