--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@
     --notification-hover: #64d798;
     --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     --box-shadow2: 0 1px 10px rgba(0, 0, 0, 0.1);
-
+    --table-header: #e9f6ef
 }
 
 a {
@@ -142,4 +142,13 @@ a {
 
 .body {
     height: 100vh;
+}
+
+.table-header {
+    background-color: var(--table-header);
+    font-size: 15px;
+    text-align: center;
+    height: 45px;
+    display: grid;
+    margin-bottom: 0px;
 }
