--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -730,6 +730,7 @@
         right: 10px;
         width: 20px;
         height: 20px;
+        cursor: pointer;
     }
 
     .personal-details-popup {
