center main cancelled requests

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,6 +113,7 @@
 @import url('Component/Admin/Admin_Center_Main_Workers.css');
 @import url('Component/Admin/Admin_Center_Main_Request_Incoming.css');
 @import url('Component/Admin/Admin_Center_Main_Request_Assigned.css');
+@import url('Component/Admin/Admin_Center_Main_Request_Cancelled.css');
 
 
 
